some more cleanup, reduce usage of static variables, some findbugs reports fixed